# template-fs-python

./: .gitpod.yml  README.md  docker-compose.yml  package.json
.github/: dependabot.yml
.github/workflows/: desktop.yml  docker.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: pyproject.toml
backend/app/src/app/api/: interface.py
backend/app/src/app/api/endpoints/: users.py
backend/app/src/app/core/: session.py
backend/app/src/app/data/: __init__.py
backend/app/src/app/data/models/: __init__.py  tokens.py  users.py
backend/app/src/app/data/schemas/: tokens.py  users.py
backend/src/app/: __init__.py  __main__.py  interface.py  server.py
backend/src/app/api/: __init__.py  interface.py
backend/src/app/api/endpoints/: auth.py  fido.py  oai.py
backend/src/app/core/: __init__.py  session.py  settings.py
backend/src/app/data/: messages.py
frontend/: Dockerfile  README.md  package.json  svelte.config.js  vite.config.js
frontend/pzzld/: Cargo.toml  package.json
frontend/pzzld/src/: lib.rs
frontend/src/lib/: constants.js  index.js
frontend/src/lib/nav/toolbar/: Toolbar.svelte
frontend/src/routes/: +layout.js  +layout.svelte  +page.svelte
frontend/src/routes/(auth)/editor/: +page.svelte
